log/build_2026-05-26_19-40-55/tourguide_navigation/stdout_stderr.log
running egg_info
writing ../../build/tourguide_navigation/tourguide_navigation.egg-info/PKG-INFO
writing dependency_links to ../../build/tourguide_navigation/tourguide_navigation.egg-info/dependency_links.txt
writing entry points to ../../build/tourguide_navigation/tourguide_navigation.egg-info/entry_points.txt
writing requirements to ../../build/tourguide_navigation/tourguide_navigation.egg-info/requires.txt
writing top-level names to ../../build/tourguide_navigation/tourguide_navigation.egg-info/top_level.txt
reading manifest file '../../build/tourguide_navigation/tourguide_navigation.egg-info/SOURCES.txt'
writing manifest file '../../build/tourguide_navigation/tourguide_navigation.egg-info/SOURCES.txt'
running build
running build_py
copying tourguide_navigation/apriltag_http_server.py -> /home/husarion/Desktop/tourguide/build/tourguide_navigation/build/lib/tourguide_navigation
running install
running install_lib
copying /home/husarion/Desktop/tourguide/build/tourguide_navigation/build/lib/tourguide_navigation/apriltag_http_server.py -> /home/husarion/Desktop/tourguide/install/tourguide_navigation/lib/python3.12/site-packages/tourguide_navigation
byte-compiling /home/husarion/Desktop/tourguide/install/tourguide_navigation/lib/python3.12/site-packages/tourguide_navigation/apriltag_http_server.py to apriltag_http_server.cpython-312.pyc
  File "/home/husarion/Desktop/tourguide/install/tourguide_navigation/lib/python3.12/site-packages/tourguide_navigation/apriltag_http_server.py", line 314
    global DEBOUNCE_S, COOLDOWN_S
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'DEBOUNCE_S' is used prior to global declaration

running install_data
running install_egg_info
removing '/home/husarion/Desktop/tourguide/install/tourguide_navigation/lib/python3.12/site-packages/tourguide_navigation-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/tourguide_navigation/tourguide_navigation.egg-info to /home/husarion/Desktop/tourguide/install/tourguide_navigation/lib/python3.12/site-packages/tourguide_navigation-0.0.0-py3.12.egg-info
running install_scripts
Installing apriltag_http_server script to /home/husarion/Desktop/tourguide/install/tourguide_navigation/lib/tourguide_navigation
Installing ros2_nav_bridge script to /home/husarion/Desktop/tourguide/install/tourguide_navigation/lib/tourguide_navigation
writing list of installed files to '/home/husarion/Desktop/tourguide/build/tourguide_navigation/install.log'
